--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,6 +1,11 @@
 .hero_section {
   background: var(--hero-bg);
 }
+.hero_section h1 {
+  color: #2cc6e9;
+  font-size: 3rem;
+  font-weight: 700;
+}
 .hero_section h2 {
   color: var(--primary-color);
   font-size: 2.5rem;
