--- a/src/components/UI/styles.css
+++ b/src/components/UI/styles.css
@@ -3,6 +3,10 @@
 .product_card {
     margin-top: 14px;
     cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .product_info a {
