--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -62,7 +62,7 @@
   right: 0;
   width: 15px;
   height: 15px;
-  content: "";
+  content: '';
   background-color: var(--primary-color);
   color: #fff;
   border-radius: 50px;
@@ -81,7 +81,7 @@
 }
 .nav_icons .profile_action {
   position: absolute;
-  right: 5%;
+  right: -100%;
   z-index: 10;
   background-color: var(--card-bg-01);
   line-height: 30px;
